GoalTracker/force-app/main/default/objects/News__c/fields/Class_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Note_Type__c</fullName>
    <label>Class Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Careers</fullName>
            </value>
            <value>
                <fullName>Awards and Recognition</fullName>
            </value>
            <value>
                <fullName>Births and Adoptions</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Engagements and Marriages</fullName>
            </value>
            <value>
                <fullName>Books and Publications</fullName>
            </value>
            <value>
                <fullName>In Memorium</fullName>
            </value>
            <value>
                <fullName>Speaking Engagements</fullName>
            </value>
            <value>
                <fullName>Personal Highlights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>