GoalTracker/force-app/main/default/objects/News__c/fields/Group_Access__c.field-meta.xml
<CustomField>
    <fullName>Group_Access__c</fullName>
    <label>Group Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visible to unauthenticated users</fullName>
            </value>
            <value>
                <fullName>Visible to all community users</fullName>
            </value>
            <value>
                <fullName>Visible to Tepper specific users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>