GoalTracker/force-app/main/default/objects/News__c/fields/Selected_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Selected_Record_Type__c</fullName>
    <description>Used for selecting record type on News component in the Community.</description>
    <label>Selected Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMU</fullName>
            </value>
            <value>
                <fullName>Tepper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>