GoalTracker/force-app/main/default/objects/News__c/recordTypes/News.recordType-meta.xml
<RecordType>
    <fullName>News</fullName>
    <active>true</active>
    <label>CMU News</label>
</RecordType>