GoalTracker/force-app/main/default/objects/News__c/recordTypes/Tepper.recordType-meta.xml
<RecordType>
    <fullName>Tepper</fullName>
    <active>true</active>
    <label>Tepper News</label>
</RecordType>