GoalTracker/force-app/main/default/objects/News__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Author__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Publish_DateTime__c</columns>
    <columns>Group_Access__c</columns>
    <columns>Private_Group__c</columns>
    <columns>School__c</columns>
    <columns>Selected_Record_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>