GoalTracker/force-app/main/default/objects/News__c/listViews/Class_Notes.listView-meta.xml
<ListView>
    <fullName>Class_Notes</fullName>
    <columns>NAME</columns>
    <columns>Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>News__c.Class_Note</value>
    </filters>
    <label>Class Notes</label>
</ListView>