GoalTracker/force-app/main/default/objects/News__c/listViews/Community_Managers_News.listView-meta.xml
<ListView>
    <fullName>Community_Managers_News</fullName>
    <columns>NAME</columns>
    <columns>Approved__c</columns>
    <columns>Author__c</columns>
    <columns>Class_Note_Type__c</columns>
    <columns>School__c</columns>
    <columns>Class_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>News__c.Class_Note</value>
    </filters>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Community Managers</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>