GoalTracker/force-app/main/default/objects/News__c/listViews/Community_Managers_News1.listView-meta.xml
<ListView>
    <fullName>Community_Managers_News1</fullName>
    <filterScope>Queue</filterScope>
    <label>Community Managers</label>
    <queue>Community_Managers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>